# Medical-GraphRAG-FactChecker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  evaluate_rag.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: golden_dataset.json
scripts/: 01_fetch_pubmedqa.py  02_scrape_claims.py  03_embed_and_index.py  04_build_knowledge_graph.py  05_fact_check_pipeline.py
src/: __init__.py  config.py  constants.py  graph.py  logger.py  search.py  utils.py
tests/: test_config.py  test_neo4j_mock.py  test_search.py  test_stress.py  test_utils.py
